增加取流数据功能。

--- a/src/Hikvision.ISUPSDK.Api/Hikvision.ISUPSDK.Api.csproj
+++ b/src/Hikvision.ISUPSDK.Api/Hikvision.ISUPSDK.Api.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 		<Authors>aaasoft</Authors>
 		<PackageProjectUrl>https://github.com/aaasoft/Hikvision.ISUPSDK</PackageProjectUrl>
 		<PackageTags>Hikvision, SDK</PackageTags>
@@ -12,6 +12,7 @@
 		<Version>2.5.0.35-preview1</Version>
 		<PackageIcon>logo.png</PackageIcon>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<AllowUnsafeBlocks>True</AllowUnsafeBlocks>
 	</PropertyGroup>
 
 	<ItemGroup>
