--- a/src/Hikvision.ISUPSDK.Api/Hikvision.ISUPSDK.Api.csproj
+++ b/src/Hikvision.ISUPSDK.Api/Hikvision.ISUPSDK.Api.csproj
@@ -9,10 +9,12 @@
 		<RepositoryType>git</RepositoryType>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Description>Hikvision.ISUPSDK二次开发API</Description>
-		<Version>2.5.0.35-preview2</Version>
+		<Version>2.5.0.35-preview3</Version>
 		<PackageIcon>logo.png</PackageIcon>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<NoWarn>$(NoWarn);1591</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
