--- a/src/Hikvision.ISUPSDK.Native/Hikvision.ISUPSDK.Native.nuspec
+++ b/src/Hikvision.ISUPSDK.Native/Hikvision.ISUPSDK.Native.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>Hikvision.ISUPSDK.Native</id>
-    <version>2.5.0.35-preview1</version>
+    <version>2.5.0.35</version>
     <authors>Hikvision</authors>
     <owners>Hikvision</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
