--- a/src/Hikvision.ISUPSDK/Hikvision.ISUPSDK.csproj
+++ b/src/Hikvision.ISUPSDK/Hikvision.ISUPSDK.csproj
@@ -9,7 +9,7 @@
 		<RepositoryType>git</RepositoryType>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Description>Hikvision.ISUPSDK原始API</Description>
-		<Version>2.5.0.35-preview6</Version>
+		<Version>1.0.0</Version>
 		<PackageIcon>logo.png</PackageIcon>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
@@ -22,7 +22,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Hikvision.ISUPSDK.Native" Version="2.5.0.35-preview1" />
+		<PackageReference Include="Hikvision.ISUPSDK.Native" Version="2.5.0.35" />
 	</ItemGroup>
 
 	<ItemGroup>
